force-app/main/default/objects/EmailToCaseMapping__mdt.object
<CustomObject>
    <description>Custom metadata used to map email to case address to origin based on email to case</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <description>Case Origin based on the email address on the email to case routing setting</description>
        <inlineHelpText>Case Origin based on the email address on the email to case routing setting</inlineHelpText>
        <label>Case Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address on the email to case routing setting</description>
        <inlineHelpText>Email Address on the email to case routing setting</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Record_Type__c</fullName>
        <description>Record type of the reopened enquiry</description>
        <label>Enquiry Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admissions</fullName>
                    <default>true</default>
                    <label>Admissions</label>
                </value>
                <value>
                    <fullName>DSS_Enquiry</fullName>
                    <label>Disability Support Services Enquiry</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>MGE_Enquiry</fullName>
                    <label>MGRO Enquiry</label>
                </value>
                <value>
                    <fullName>MPass_Card_Office</fullName>
                    <label>MPass Card Office</label>
                </value>
                <value>
                    <fullName>Professional_Development</fullName>
                    <label>Professional Development</label>
                </value>
                <value>
                    <fullName>SEBS</fullName>
                </value>
                <value>
                    <fullName>SEBS_Placements</fullName>
                    <label>SEBS Placements</label>
                </value>
                <value>
                    <fullName>SR_Enquiry</fullName>
                    <label>SR Enquiry</label>
                </value>
                <value>
                    <fullName>School Enquiry</fullName>
                </value>
                <value>
                    <fullName>Special_Consideration</fullName>
                    <label>Special Consideration</label>
                </value>
                <value>
                    <fullName>Special_Consideration_Limited</fullName>
                    <label>Special Consideration Limited</label>
                </value>
                <value>
                    <fullName>Monash_Connect_Enquiry</fullName>
                    <label>Standard Enquiry</label>
                </value>
                <value>
                    <fullName>myResearch</fullName>
                </value>
                <value>
                    <fullName>Post-Application Enquiry</fullName>
                </value>
                <value>
                    <fullName>SS_InternationalStudentEngagement</fullName>
                    <label>International Student Engagement</label>
                </value>
                <value>
                    <fullName>MRO</fullName>
                    <label>Monash Research Office</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email To Case Mapping</label>
    <pluralLabel>Email To Case Mappings</pluralLabel>
</CustomObject>